--- a/index.css
+++ b/index.css
@@ -59,3 +59,7 @@
   margin: 10px; /* Add some spacing around the text */
   color: #333; /* Set text color to a dark gray */
 }
+.res-logo {
+  width: 100%;
+  padding: 5px;
+}
